# ros2_xmake_examples

./: .gitignore  .xlings.json  CHANGELOG.md  LICENSE  README.md  ros2_xmake.repos
.github/workflows/: ci.yml  e2e.yml
demo_xmake_action/: package.xml  xmake.lua
demo_xmake_action/src/: countdown_client.cpp  countdown_server.cpp
demo_xmake_benchmark/: package.xml  xmake.lua
demo_xmake_benchmark/src/: latency_ping.cpp  latency_pong.cpp  throughput_test.cpp
demo_xmake_component/: package.xml  plugin_description.xml  xmake.lua
demo_xmake_component/src/: talker_component.cpp  talker_component.hpp
demo_xmake_cpp/: package.xml  xmake.lua
demo_xmake_cpp/src/: demo_lib.cpp  demo_lib.hpp  main.cpp  turtle_circle_node.cpp
demo_xmake_custom_msg_node/: package.xml  xmake.lua
demo_xmake_custom_msg_node/.deps/custom_msg_publisher/linux/x86_64/release/: custom_msg_publisher.d
demo_xmake_custom_msg_node/.deps/custom_msg_publisher/linux/x86_64/release/__/__/src/ros2_xmake_examples/demo_xmake_custom_msg_node/src/: publisher_node.cpp.o.d
demo_xmake_custom_msg_node/linux/x86_64/release/: custom_msg_publisher
demo_xmake_custom_msg_node/src/: publisher_node.cpp
demo_xmake_dds_config/: package.xml  xmake.lua
demo_xmake_dds_config/config/: cyclonedds_config.xml  fastdds_profile.xml
demo_xmake_dds_config/docs/: rmw_guide.md
demo_xmake_dds_config/launch/: with_dds_config.launch.py
demo_xmake_executor/: package.xml  xmake.lua
demo_xmake_executor/src/: multi_threaded_demo.cpp  single_threaded_demo.cpp
demo_xmake_hardware/: package.xml  plugin_description.xml  xmake.lua
demo_xmake_hardware/src/: mock_robot_hardware.cpp
demo_xmake_image/: package.xml  xmake.lua
demo_xmake_image/src/: image_publisher.cpp  image_subscriber.cpp
demo_xmake_interfaces/: package.xml  xmake.lua
demo_xmake_interfaces/.deps/demo_xmake_interfaces__rosidl_generator_c/linux/x86_64/release/: libdemo_xmake_interfaces__rosidl_generator_c.so.d
demo_xmake_interfaces/.deps/demo_xmake_interfaces__rosidl_generator_c/linux/x86_64/release/rosidl_output/rosidl_generator_c/demo_xmake_interfaces/msg/detail/: my_msg__description.c.o.d  my_msg__functions.c.o.d  my_msg__type_support.c.o.d
demo_xmake_interfaces/.deps/demo_xmake_interfaces__rosidl_generator_c/linux/x86_64/release/rosidl_output/rosidl_generator_c/demo_xmake_interfaces/srv/detail/: my_srv__description.c.o.d  my_srv__functions.c.o.d  my_srv__type_support.c.o.d
demo_xmake_interfaces/.deps/demo_xmake_interfaces__rosidl_typesupport_c/linux/x86_64/release/: libdemo_xmake_interfaces__rosidl_typesupport_c.so.d
demo_xmake_interfaces/.deps/demo_xmake_interfaces__rosidl_typesupport_c/linux/x86_64/release/rosidl_output/rosidl_typesupport_c/demo_xmake_interfaces/msg/: my_msg__type_support.cpp.o.d
demo_xmake_interfaces/.deps/demo_xmake_interfaces__rosidl_typesupport_c/linux/x86_64/release/rosidl_output/rosidl_typesupport_c/demo_xmake_interfaces/srv/: my_srv__type_support.cpp.o.d
demo_xmake_interfaces/.deps/demo_xmake_interfaces__rosidl_typesupport_cpp/linux/x86_64/release/: libdemo_xmake_interfaces__rosidl_typesupport_cpp.so.d
demo_xmake_interfaces/.deps/demo_xmake_interfaces__rosidl_typesupport_cpp/linux/x86_64/release/rosidl_output/rosidl_typesupport_cpp/demo_xmake_interfaces/msg/: my_msg__type_support.cpp.o.d
demo_xmake_interfaces/.deps/demo_xmake_interfaces__rosidl_typesupport_cpp/linux/x86_64/release/rosidl_output/rosidl_typesupport_cpp/demo_xmake_interfaces/srv/: my_srv__type_support.cpp.o.d
demo_xmake_interfaces/.deps/demo_xmake_interfaces__rosidl_typesupport_fastrtps_c/linux/x86_64/release/: libdemo_xmake_interfaces__rosidl_typesupport_fastrtps_c.so.d
demo_xmake_interfaces/.deps/demo_xmake_interfaces__rosidl_typesupport_fastrtps_cpp/linux/x86_64/release/: libdemo_xmake_interfaces__rosidl_typesupport_fastrtps_cpp.so.d
demo_xmake_interfaces/.deps/demo_xmake_interfaces__rosidl_typesupport_introspection_c/linux/x86_64/release/: libdemo_xmake_interfaces__rosidl_typesupport_introspection_c.so.d
demo_xmake_interfaces/.deps/demo_xmake_interfaces__rosidl_typesupport_introspection_cpp/linux/x86_64/release/: libdemo_xmake_interfaces__rosidl_typesupport_introspection_cpp.so.d
demo_xmake_interfaces/action/: Countdown.action
demo_xmake_interfaces/msg/: MyMsg.msg
demo_xmake_interfaces/srv/: MySrv.srv
demo_xmake_launch/: package.xml  xmake.lua
demo_xmake_launch/config/: params.yaml
demo_xmake_launch/launch/: demo.launch.py
demo_xmake_lifecycle/: package.xml  xmake.lua
demo_xmake_logging/: package.xml  xmake.lua
demo_xmake_logging/src/: diagnostics_node.cpp
demo_xmake_mixed/: package.xml  setup.py  xmake.lua
demo_xmake_nav_plugin/: package.xml  plugin_description.xml  xmake.lua
demo_xmake_params/: package.xml  xmake.lua
demo_xmake_pubsub/: package.xml  xmake.lua
demo_xmake_qos/: package.xml  xmake.lua
demo_xmake_robot_description/: package.xml  xmake.lua
demo_xmake_robot_description/launch/: display.launch.py
demo_xmake_robot_description/urdf/: simple_robot.urdf
demo_xmake_rosbag/: package.xml  xmake.lua
demo_xmake_rviz_markers/: package.xml  xmake.lua
demo_xmake_service/: package.xml  xmake.lua
demo_xmake_service/src/: add_two_ints_client.cpp  add_two_ints_server.cpp
demo_xmake_testing/: package.xml  xmake.lua
demo_xmake_tf2/: package.xml  xmake.lua
demo_xmake_timer/: package.xml  xmake.lua
demo_xmake_tracing/: package.xml  xmake.lua
docs/: 01_pubsub.md  02_service.md  03_timer_logging.md  04_library.md  05_params.md  06_interfaces.md  07_component.md  08_action.md  09_lifecycle.md  10_launch.md  11_mixed.md  12_qos.md  13_testing.md  14_cmake_interop.md  15_tf2.md  16_robot_description.md  17_rviz_markers.md  18_executor.md  19_image.md  20_rosbag.md  21_nav_plugin.md  22_hardware.md  23_dds_config.md  24_logging_diagnostics.md  25_tracing.md  26_profiling.md  27_benchmark.md  README.md  SCENARIOS.md
downstream_cmake_consumer/: CMakeLists.txt  package.xml
downstream_cmake_consumer/src/: consumer.cpp
scripts/: e2e_clean_build.sh  e2e_negative_checks.sh  ga_gate_check.sh  runtime_smoke.sh
(+38 files in other folders)
