<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>demo_xmake_interfaces</name>
  <version>0.1.0</version>
  <description>Example ROS package with custom .msg and .srv definitions built with xmake.</description>
  <maintainer email="devnull@example.com">ros2_xmake maintainers</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_xmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>builtin_interfaces</depend>
  <depend>rosidl_default_runtime</depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_xmake</build_type>
  </export>
</package>
