<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>downstream_cmake_consumer</name>
  <version>0.1.0</version>
  <description>Downstream ament_cmake package consuming demo_xmake_cpp exports.</description>
  <maintainer email="devnull@example.com">ros2_xmake maintainers</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>demo_xmake_cpp</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
